--- a/TodoList/TodoList/appsettings.json
+++ b/TodoList/TodoList/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=_TodoListWASM;Trusted_Connection=True;MultipleActiveResultSets=true;"
+    "Old": "Server=(localdb)\\mssqllocaldb;Database=_TodoListWASM;Trusted_Connection=True;MultipleActiveResultSets=true;",
+    "DefaultConnection": "Server=localhost;Database=TodoList;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=True;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
